some thins have changed

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,11 +18,11 @@
     <div class="content container">
         {% if user.is_authenticated %}
             <h2><div align="right">
-                <a href="/admin/logout">Logout :O</a>
+                <a href="/admin/logout">Logout</a>
             </div> </h2>
         {% else %}
             <h2><div align="right">
-                <a href="/admin">Login :D</a>
+                <a href="/admin">Login</a>
             </div> </h2>
         {% endif %}
         <div class="row">
